added preparations for ru/en language support