@@ -1,16 +1,19 @@
 package commands;
 
-import audio.MusicCore;
 import audio.TrackUtils;
 import com.sedmelluq.discord.lavaplayer.player.AudioLoadResultHandler;
 import com.sedmelluq.discord.lavaplayer.tools.FriendlyException;
 import com.sedmelluq.discord.lavaplayer.track.AudioPlaylist;
 import com.sedmelluq.discord.lavaplayer.track.AudioTrack;
-import interaction.CurrentStatus;
 import commands.urlBuild.IdentifierBuilder;
+import interaction.CurrentStatus;
+import localization.MessageCatalog;
 import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
 
 public final class PlayHandler extends BaseMusicCommand {
+    public PlayHandler(MessageCatalog messages) {
+        super(messages);
+    }
 
     @Override
     public String name() {
@@ -22,16 +25,15 @@ public final class PlayHandler extends BaseMusicCommand {
         event.deferReply(false).queue();
 
         if (!isUserInVoice(status)) {
-            event.getHook().editOriginal("А куда мне зайти?").queue();
+            event.getHook().editOriginal(messages.get(status.language(), "voice.user_not_connected")).queue();
             return;
         }
 
-        if (canBotJoin(status)) {
-            event.getHook().editOriginal("У меня нет прав, чтобы зайти в голосовой канал").queue();
+        if (lacksVoicePermissions(status)) {
+            event.getHook().editOriginal(messages.get(status.language(), "voice.missing_permissions")).queue();
             return;
         }
 
-        var core = MusicCore.getInstance();
         var guild = status.guild();
         var guildHandler = core.getGuildHandler(guild);
         var audioManager = status.audioManager();
@@ -39,19 +41,18 @@ public final class PlayHandler extends BaseMusicCommand {
             audioManager.setSendingHandler(guildHandler.getAudioSendHandler());
         }
 
-        if (!isBotUserInSameChannel(status)) {
-            if (!connectToUserVoice(status)) {
-                event.getHook().editOriginal("Не удалось подключиться к голосовому каналу").queue();
-                return;
-            }
+        if (!isBotUserInSameChannel(status) && !connectToUserVoice(status)) {
+            event.getHook().editOriginal(messages.get(status.language(), "voice.connection_failed")).queue();
+            return;
         }
 
         MusicPanelHandler.getInstance().rememberChannel(guild, event.getChannel());
 
-        var rawQuery = event.getOption("query").getAsString();
+        var queryOption = event.getOption("query");
+        var rawQuery = queryOption == null ? "" : queryOption.getAsString();
         var identifier = IdentifierBuilder.build(rawQuery);
         if (identifier == null || identifier.isBlank()) {
-            event.getHook().editOriginal("Пустой запрос").queue();
+            event.getHook().editOriginal(messages.get(status.language(), "play.empty_query")).queue();
             return;
         }
 
@@ -59,52 +60,54 @@ public final class PlayHandler extends BaseMusicCommand {
             @Override
             public void trackLoaded(AudioTrack track) {
                 guildHandler.getScheduler().queue(track);
-                audio.MusicCore.getInstance().cancelAfkDisconnect(status.guild().getIdLong());
+                core.cancelAfkDisconnect(guild.getIdLong());
                 MusicPanelHandler.getInstance().showOrUpdate(guild);
 
-                String title = track.getInfo().title;
-                String duration = TrackUtils.formatDuration(track.getInfo().length);
-                event.getHook().editOriginal("Добавил в очередь: " + title + "** `" + duration + "`").queue();
+                event.getHook().editOriginal(messages.get(
+                        status.language(),
+                        "play.track_queued",
+                        track.getInfo().title,
+                        TrackUtils.formatDuration(track.getInfo().length)
+                )).queue();
             }
 
             @Override
             public void playlistLoaded(AudioPlaylist playlist) {
                 if (playlist.isSearchResult()) {
-                    AudioTrack first = playlist.getTracks().get(0);
+                    AudioTrack first = playlist.getTracks().getFirst();
                     guildHandler.getScheduler().queue(first);
-                    audio.MusicCore.getInstance().cancelAfkDisconnect(status.guild().getIdLong());
+                    core.cancelAfkDisconnect(guild.getIdLong());
                     MusicPanelHandler.getInstance().showOrUpdate(guild);
-                    event.getHook().editOriginal("Нашел: " + first.getInfo().title).queue();
+                    event.getHook().editOriginal(messages.get(
+                            status.language(), "play.search_found", first.getInfo().title
+                    )).queue();
                     return;
                 }
 
-                int trackCounter = 0;
+                int trackCount = 0;
                 for (AudioTrack track : playlist.getTracks()) {
                     guildHandler.getScheduler().queue(track);
-                    trackCounter++;
+                    trackCount++;
                 }
 
-                audio.MusicCore.getInstance().cancelAfkDisconnect(status.guild().getIdLong());
+                core.cancelAfkDisconnect(guild.getIdLong());
                 MusicPanelHandler.getInstance().showOrUpdate(guild);
-                event.getHook().editOriginal(
-                        "Добавил плейлист: " + playlist.getName() + " (" + trackCounter + " треков)"
-                ).queue();
+                event.getHook().editOriginal(messages.get(
+                        status.language(), "play.playlist_queued", playlist.getName(), trackCount
+                )).queue();
             }
 
             @Override
             public void noMatches() {
-                event.getHook().editOriginal("Ничего не нашел по твоему запросу").queue();
+                event.getHook().editOriginal(messages.get(status.language(), "play.no_matches")).queue();
             }
 
             @Override
             public void loadFailed(FriendlyException exception) {
-                event.getHook().editOriginal("Ошибка загрузки: " + exception.getMessage()).queue();
+                event.getHook().editOriginal(messages.get(
+                        status.language(), "play.load_failed", exception.getMessage()
+                )).queue();
                 System.err.println("[PlayHandler][loadFailed] severity=" + exception.severity);
-                System.err.println("[PlayHandler][loadFailed] message=" + exception.getMessage());
-                if (exception.getCause() != null) {
-                    System.err.println("[PlayHandler][loadFailed] cause=" +
-                            exception.getCause().getClass().getName() + " : " + exception.getCause().getMessage());
-                }
                 exception.printStackTrace();
             }
         });
